fix: sf-collected-product with visible button on focus

--- a/packages/shared/styles/components/organisms/SfCollectedProduct.scss
+++ b/packages/shared/styles/components/organisms/SfCollectedProduct.scss
@@ -109,6 +109,11 @@
         );
       }
     }
+    &__remove {
+      &:focus {
+        --collected-product-remove-opacity: 1;
+      }
+    }
     &__aside {
       flex: 0 0 8.75rem;
     }
